src/rule_interpreter/grammar/generated/BusinessRulesParser.py
# Generated from src/rule_interpreter/grammar/BusinessRules.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BusinessRulesParser ( Parser ):

    grammarFileName = "BusinessRules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'and'", "'or'", "'not'", "'in'", "<INVALID>", "'ret'", 
                     "'workflow'", "'=>'", "'=='", "'!='", "'<='", "'>='", 
                     "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'+='", "'-='", "'*='", "'/='", "'('", "')'", "'['", 
                     "']'", "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "NONE", "AND", "OR", 
                      "NOT", "IN", "NOT_IN", "RET", "WORKFLOW", "ARROW", 
                      "EQ", "NEQ", "LTE", "GTE", "LT", "GT", "PLUS", "MINUS", 
                      "STAR", "SLASH", "MOD", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "STAR_ASSIGN", "SLASH_ASSIGN", "LPAREN", "RPAREN", 
                      "LBRACKET", "RBRACKET", "DOT", "COMMA", "SEMICOLON", 
                      "NUMBER", "STRING", "IDENTIFIER", "WS", "LINE_COMMENT" ]

    RULE_rule_ = 0
    RULE_condition = 1
    RULE_orExpr = 2
    RULE_andExpr = 3
    RULE_notExpr = 4
    RULE_comparison = 5
    RULE_addExpr = 6
    RULE_mulExpr = 7
    RULE_unaryExpr = 8
    RULE_primary = 9
    RULE_literal = 10
    RULE_list_ = 11
    RULE_path = 12
    RULE_workflowCall = 13
    RULE_actions = 14
    RULE_action = 15
    RULE_returnStmt = 16
    RULE_assignment = 17
    RULE_assignOp = 18

    ruleNames =  [ "rule_", "condition", "orExpr", "andExpr", "notExpr", 
                   "comparison", "addExpr", "mulExpr", "unaryExpr", "primary", 
                   "literal", "list_", "path", "workflowCall", "actions", 
                   "action", "returnStmt", "assignment", "assignOp" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    NONE=3
    AND=4
    OR=5
    NOT=6
    IN=7
    NOT_IN=8
    RET=9
    WORKFLOW=10
    ARROW=11
    EQ=12
    NEQ=13
    LTE=14
    GTE=15
    LT=16
    GT=17
    PLUS=18
    MINUS=19
    STAR=20
    SLASH=21
    MOD=22
    ASSIGN=23
    PLUS_ASSIGN=24
    MINUS_ASSIGN=25
    STAR_ASSIGN=26
    SLASH_ASSIGN=27
    LPAREN=28
    RPAREN=29
    LBRACKET=30
    RBRACKET=31
    DOT=32
    COMMA=33
    SEMICOLON=34
    NUMBER=35
    STRING=36
    IDENTIFIER=37
    WS=38
    LINE_COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Rule_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(BusinessRulesParser.ConditionContext,0)


        def ARROW(self):
            return self.getToken(BusinessRulesParser.ARROW, 0)

        def actions(self):
            return self.getTypedRuleContext(BusinessRulesParser.ActionsContext,0)


        def EOF(self):
            return self.getToken(BusinessRulesParser.EOF, 0)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_rule_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule_" ):
                listener.enterRule_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule_" ):
                listener.exitRule_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_" ):
                return visitor.visitRule_(self)
            else:
                return visitor.visitChildren(self)




    def rule_(self):

        localctx = BusinessRulesParser.Rule_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_rule_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.condition()
            self.state = 39
            self.match(BusinessRulesParser.ARROW)
            self.state = 40
            self.actions()
            self.state = 41
            self.match(BusinessRulesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(BusinessRulesParser.OrExprContext,0)


        def getRuleIndex(self):
            return BusinessRulesParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = BusinessRulesParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.AndExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.OR)
            else:
                return self.getToken(BusinessRulesParser.OR, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_orExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)




    def orExpr(self):

        localctx = BusinessRulesParser.OrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_orExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.andExpr()
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 46
                self.match(BusinessRulesParser.OR)
                self.state = 47
                self.andExpr()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.NotExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.NotExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.AND)
            else:
                return self.getToken(BusinessRulesParser.AND, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_andExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)




    def andExpr(self):

        localctx = BusinessRulesParser.AndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_andExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.notExpr()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 54
                self.match(BusinessRulesParser.AND)
                self.state = 55
                self.notExpr()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(BusinessRulesParser.NOT, 0)

        def notExpr(self):
            return self.getTypedRuleContext(BusinessRulesParser.NotExprContext,0)


        def comparison(self):
            return self.getTypedRuleContext(BusinessRulesParser.ComparisonContext,0)


        def getRuleIndex(self):
            return BusinessRulesParser.RULE_notExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpr" ):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)




    def notExpr(self):

        localctx = BusinessRulesParser.NotExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_notExpr)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(BusinessRulesParser.NOT)
                self.state = 62
                self.notExpr()
                pass
            elif token in [1, 2, 3, 10, 19, 28, 30, 35, 36, 37]:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.comparison()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.AddExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.AddExprContext,i)


        def EQ(self):
            return self.getToken(BusinessRulesParser.EQ, 0)

        def NEQ(self):
            return self.getToken(BusinessRulesParser.NEQ, 0)

        def LT(self):
            return self.getToken(BusinessRulesParser.LT, 0)

        def GT(self):
            return self.getToken(BusinessRulesParser.GT, 0)

        def LTE(self):
            return self.getToken(BusinessRulesParser.LTE, 0)

        def GTE(self):
            return self.getToken(BusinessRulesParser.GTE, 0)

        def IN(self):
            return self.getToken(BusinessRulesParser.IN, 0)

        def NOT_IN(self):
            return self.getToken(BusinessRulesParser.NOT_IN, 0)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = BusinessRulesParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.addExpr()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 258432) != 0):
                self.state = 67
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 258432) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 68
                self.addExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mulExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.MulExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.MulExprContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.PLUS)
            else:
                return self.getToken(BusinessRulesParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.MINUS)
            else:
                return self.getToken(BusinessRulesParser.MINUS, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_addExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddExpr" ):
                listener.enterAddExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddExpr" ):
                listener.exitAddExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddExpr" ):
                return visitor.visitAddExpr(self)
            else:
                return visitor.visitChildren(self)




    def addExpr(self):

        localctx = BusinessRulesParser.AddExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_addExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.mulExpr()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18 or _la==19:
                self.state = 72
                _la = self._input.LA(1)
                if not(_la==18 or _la==19):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 73
                self.mulExpr()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.UnaryExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.UnaryExprContext,i)


        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.STAR)
            else:
                return self.getToken(BusinessRulesParser.STAR, i)

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.SLASH)
            else:
                return self.getToken(BusinessRulesParser.SLASH, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.MOD)
            else:
                return self.getToken(BusinessRulesParser.MOD, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_mulExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulExpr" ):
                listener.enterMulExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulExpr" ):
                listener.exitMulExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulExpr" ):
                return visitor.visitMulExpr(self)
            else:
                return visitor.visitChildren(self)




    def mulExpr(self):

        localctx = BusinessRulesParser.MulExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mulExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.unaryExpr()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7340032) != 0):
                self.state = 80
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7340032) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 81
                self.unaryExpr()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINUS(self):
            return self.getToken(BusinessRulesParser.MINUS, 0)

        def unaryExpr(self):
            return self.getTypedRuleContext(BusinessRulesParser.UnaryExprContext,0)


        def primary(self):
            return self.getTypedRuleContext(BusinessRulesParser.PrimaryContext,0)


        def getRuleIndex(self):
            return BusinessRulesParser.RULE_unaryExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExpr" ):
                listener.enterUnaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExpr" ):
                listener.exitUnaryExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpr" ):
                return visitor.visitUnaryExpr(self)
            else:
                return visitor.visitChildren(self)




    def unaryExpr(self):

        localctx = BusinessRulesParser.UnaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_unaryExpr)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.match(BusinessRulesParser.MINUS)
                self.state = 88
                self.unaryExpr()
                pass
            elif token in [1, 2, 3, 10, 28, 30, 35, 36, 37]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.primary()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(BusinessRulesParser.LPAREN, 0)

        def orExpr(self):
            return self.getTypedRuleContext(BusinessRulesParser.OrExprContext,0)


        def RPAREN(self):
            return self.getToken(BusinessRulesParser.RPAREN, 0)

        def literal(self):
            return self.getTypedRuleContext(BusinessRulesParser.LiteralContext,0)


        def path(self):
            return self.getTypedRuleContext(BusinessRulesParser.PathContext,0)


        def workflowCall(self):
            return self.getTypedRuleContext(BusinessRulesParser.WorkflowCallContext,0)


        def getRuleIndex(self):
            return BusinessRulesParser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimary" ):
                return visitor.visitPrimary(self)
            else:
                return visitor.visitChildren(self)




    def primary(self):

        localctx = BusinessRulesParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_primary)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(BusinessRulesParser.LPAREN)
                self.state = 93
                self.orExpr()
                self.state = 94
                self.match(BusinessRulesParser.RPAREN)
                pass
            elif token in [1, 2, 3, 30, 35, 36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.literal()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.path()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.workflowCall()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(BusinessRulesParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(BusinessRulesParser.STRING, 0)

        def TRUE(self):
            return self.getToken(BusinessRulesParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(BusinessRulesParser.FALSE, 0)

        def NONE(self):
            return self.getToken(BusinessRulesParser.NONE, 0)

        def list_(self):
            return self.getTypedRuleContext(BusinessRulesParser.List_Context,0)


        def getRuleIndex(self):
            return BusinessRulesParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = BusinessRulesParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_literal)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(BusinessRulesParser.NUMBER)
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(BusinessRulesParser.STRING)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.match(BusinessRulesParser.TRUE)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.match(BusinessRulesParser.FALSE)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.match(BusinessRulesParser.NONE)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 6)
                self.state = 106
                self.list_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(BusinessRulesParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(BusinessRulesParser.RBRACKET, 0)

        def orExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.OrExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.OrExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.COMMA)
            else:
                return self.getToken(BusinessRulesParser.COMMA, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_list_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_" ):
                listener.enterList_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_" ):
                listener.exitList_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_" ):
                return visitor.visitList_(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = BusinessRulesParser.List_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_list_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(BusinessRulesParser.LBRACKET)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 241860871246) != 0):
                self.state = 110
                self.orExpr()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==33:
                    self.state = 111
                    self.match(BusinessRulesParser.COMMA)
                    self.state = 112
                    self.orExpr()
                    self.state = 117
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 120
            self.match(BusinessRulesParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.IDENTIFIER)
            else:
                return self.getToken(BusinessRulesParser.IDENTIFIER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.DOT)
            else:
                return self.getToken(BusinessRulesParser.DOT, i)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.LBRACKET)
            else:
                return self.getToken(BusinessRulesParser.LBRACKET, i)

        def orExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BusinessRulesParser.OrExprContext)
            else:
                return self.getTypedRuleContext(BusinessRulesParser.OrExprContext,i)


        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(BusinessRulesParser.RBRACKET)
            else:
                return self.getToken(BusinessRulesParser.RBRACKET, i)

        def getRuleIndex(self):
            return BusinessRulesParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPath" ):
                return visitor.visitPath(self)
            else:
                return visitor.visitChildren(self)




    def path(self):
